data/Java/02-missing-void/6/[M]Error.txt
https://stackoverflow.com/questions/49783701/invalid-method-declaration-return-type-required-line-10-14-additional-errors
Program.java:16: error: invalid method declaration; return type required
    public setRadius (double r){
           ^